# autotuner

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  InstructionsForAutoTuner.md  LICENSE  Makefile  pyproject.toml
.github/workflows/: ci.yml
scripts/: plot.py
src/autotuner/: cli.py  distributed.py  utils.py
src/autotuner/algorithms/: __init__.py  base.py
src/autotuner/cli/: __init__.py
src/autotuner/config/: __init__.py
src/autotuner/core/: __init__.py  config.py  exceptions.py  injection.py  interfaces.py  logging.py
src/autotuner/evaluators/: __init__.py  base.py
src/autotuner/io/: __init__.py
src/autotuner/runners/: __init__.py  base.py
test/: ref_file_check.py  resume_check.py  smoke_test_algo_eval.py  smoke_test_sample_iteration.py  smoke_test_sweep.py  smoke_test_tune.py  test_exceptions.py  test_logging.py
test/files/: no_fr_ref.json  no_sdc_ref.json
