[project]
name = "autotuner"
version = "0.0.1"
description = "This project provides a set of tools for tuning OpenROAD-flow-scripts parameter without user interference."
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 3-Clause",
]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "ax-platform>=0.3.3,<=0.3.7",
    "bayesian-optimization==1.4.0",
    "colorama==0.4.6",
    "hyperopt==0.2.7",
    "matplotlib==3.10.0",
    "optuna==3.6.0",
    "pandas>=2.0,<=2.2.1",
    "protobuf>=5.26.1",
    "pyyaml==6.0.1",
    "ray[default,tune]==2.43.0",
    "sqlalchemy==1.4.17",
    "tensorboard>=2.14.0,<=2.16.2",
    "urllib3>=1.26.17",
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
]

[project.scripts]
openroad_autotuner = "autotuner.distributed:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.dev = { file = ["requirements-dev.txt"] }

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]
include = [
    "autotuner*",
]

[tool.setuptools]
include-package-data = true
