[project]
name = "autotuner"
version = "0.0.1"
description = "This project provides a set of tools for tuning OpenROAD-flow-scripts parameter without user interference."
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 3-Clause",
]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "ax-platform>=0.3.3,<=0.3.7",
    "bayesian-optimization==1.4.0",
    "colorama==0.4.6",
    "hyperopt==0.2.7",
    "matplotlib==3.10.0",
    "optuna==3.6.0",
    "pandas>=2.0,<=2.2.1",
    "protobuf>=5.26.1",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pyyaml==6.0.1",
    "ray[default,tune]==2.43.0",
    "sqlalchemy==1.4.17",
    "tensorboard>=2.14.0,<=2.16.2",
    "urllib3>=1.26.17",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.11.0",
    "pre-commit>=4.2.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-benchmark>=4.0.0",
    "coverage>=7.0.0",
]

[project.scripts]
openroad_autotuner = "autotuner.cli:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.dev = { file = ["requirements-dev.txt"] }

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]
include = [
    "autotuner*",
]

[tool.setuptools]
include-package-data = true

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

# Rules to ignore
ignore = [
    "E501",
    "B008",
    "C408",
    "C901",
]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = ["ARG001", "S101"]
"**/test_*.py" = ["ARG001", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
